--- a/plugins/robots/robotsInterpreter/details/nxtDisplay.ui
+++ b/plugins/robots/robotsInterpreter/details/nxtDisplay.ui
@@ -432,10 +432,10 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>NxtDisplay</string>
+   <string>tr(NxtDisplay)</string>
   </property>
   <property name="autoFillBackground">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton#bottomButton{
