--- a/qrgui/dialogs/propertiesDialog.ui
+++ b/qrgui/dialogs/propertiesDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0" rowspan="5" colspan="3">
-    <widget class="QListWidget" name="PropertiesNamesList"/>
+    <widget class="QListWidget" name="propertiesNamesList"/>
    </item>
    <item row="5" column="3">
     <widget class="QPushButton" name="closeButton">
