--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -23,9 +23,12 @@
         <file>icons/2d_ruler.png</file>
         <file>icons/2d_save.png</file>
         <file>icons/2d_target.png</file>
-        <file>icons/sensors/2d_color.png</file>
         <file>icons/sensors/2d_light.png</file>
         <file>icons/sensors/2d_sonar.png</file>
         <file>icons/sensors/2d_touch.png</file>
+        <file>icons/sensors/2d_color_blue.png</file>
+        <file>icons/sensors/2d_color_empty.png</file>
+        <file>icons/sensors/2d_color_green.png</file>
+        <file>icons/sensors/2d_color_red.png</file>
     </qresource>
 </RCC>
