--- a/qrgui/dialogs/metamodelingOnFly/chooseTypeDialog.ui
+++ b/qrgui/dialogs/metamodelingOnFly/chooseTypeDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Выберите тип добавляемого элемента:</string>
+   <string>Choose element type</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -26,7 +26,7 @@
     <item>
      <widget class="QRadioButton" name="nodeRadioButton">
       <property name="text">
-       <string>Сущность</string>
+       <string>Entity</string>
       </property>
       <property name="checked">
        <bool>true</bool>
@@ -36,7 +36,7 @@
     <item>
      <widget class="QRadioButton" name="edgeRadioButton">
       <property name="text">
-       <string>Связь</string>
+       <string>Relationship</string>
       </property>
      </widget>
     </item>
