--- a/qrgui/dialogs/metamodelingOnFly/edgePropertiesDialog.ui
+++ b/qrgui/dialogs/metamodelingOnFly/edgePropertiesDialog.ui
@@ -13,261 +13,177 @@
   <property name="windowTitle">
    <string>Edge properties</string>
   </property>
-  <widget class="QLabel" name="nameLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>name: *</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="nameEdit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>10</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelTextLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>labelText:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="labelTextEdit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>40</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelTypeLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>70</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>labelType:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="labelTypeComboBox">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>70</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Dynamic text</string>
-    </property>
+  <layout class="QFormLayout" name="formLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="nameLabel">
+     <property name="text">
+      <string>name: *</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Static text</string>
-    </property>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="nameEdit"/>
    </item>
-  </widget>
-  <widget class="QLabel" name="lineTypeLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>100</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>lineType:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="lineTypeComboBox">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>100</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>solidLine</string>
-    </property>
+   <item row="2" column="0">
+    <widget class="QLabel" name="labelTextLabel">
+     <property name="text">
+      <string>labelText:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>dashLine</string>
-    </property>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="labelTextEdit"/>
    </item>
-   <item>
-    <property name="text">
-     <string>dotLine</string>
-    </property>
+   <item row="4" column="0">
+    <widget class="QLabel" name="labelTypeLabel">
+     <property name="text">
+      <string>labelType:</string>
+     </property>
+    </widget>
    </item>
-  </widget>
-  <widget class="QLabel" name="beginTypeLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>130</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>beginType:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="beginTypeComboBox">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>130</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>1</number>
-   </property>
-   <item>
-    <property name="text">
-     <string>no_arrow</string>
-    </property>
+   <item row="4" column="1">
+    <widget class="QComboBox" name="labelTypeComboBox">
+     <item>
+      <property name="text">
+       <string>Dynamic text</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Static text</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>open_arrow</string>
-    </property>
+   <item row="6" column="0">
+    <widget class="QLabel" name="lineTypeLabel">
+     <property name="text">
+      <string>lineType:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>empty_arrow</string>
-    </property>
+   <item row="6" column="1">
+    <widget class="QComboBox" name="lineTypeComboBox">
+     <item>
+      <property name="text">
+       <string>solidLine</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>dashLine</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>dotLine</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>filled_arrow</string>
-    </property>
+   <item row="8" column="0">
+    <widget class="QLabel" name="beginTypeLabel">
+     <property name="text">
+      <string>beginType:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>empty_rhomb</string>
-    </property>
+   <item row="8" column="1">
+    <widget class="QComboBox" name="beginTypeComboBox">
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <item>
+      <property name="text">
+       <string>no_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>open_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>empty_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>filled_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>empty_rhomb</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>filled_rhomb</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>filled_rhomb</string>
-    </property>
+   <item row="10" column="0">
+    <widget class="QLabel" name="endTypeLabel">
+     <property name="text">
+      <string>endType:</string>
+     </property>
+    </widget>
    </item>
-  </widget>
-  <widget class="QLabel" name="endTypeLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>160</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>endType:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="endTypeComboBox">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>160</y>
-     <width>201</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>1</number>
-   </property>
-   <item>
-    <property name="text">
-     <string>no_arrow</string>
-    </property>
+   <item row="10" column="1">
+    <widget class="QComboBox" name="endTypeComboBox">
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <item>
+      <property name="text">
+       <string>no_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>open_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>empty_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>filled_arrow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>empty_rhomb</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>filled_rhomb</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>open_arrow</string>
-    </property>
+   <item row="12" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>* Need to be filled</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>empty_arrow</string>
-    </property>
+   <item row="13" column="1">
+    <widget class="QPushButton" name="okPushButton">
+     <property name="text">
+      <string>OK</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>filled_arrow</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>empty_rhomb</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>filled_rhomb</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QPushButton" name="okPushButton">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>220</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>OK</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>220</y>
-     <width>211</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>* Need to be filled</string>
-   </property>
-  </widget>
+  </layout>
  </widget>
  <resources/>
  <connections/>
