--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -773,7 +773,7 @@ p, li { white-space: pre-wrap; }
   <customwidget>
    <class>GridParameters</class>
    <extends>QGroupBox</extends>
-   <header>gridparameters.h</header>
+   <header>details/d2RobotModel/gridParameters.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
