--- a/qrgui/qrgui.qrc
+++ b/qrgui/qrgui.qrc
@@ -39,6 +39,7 @@
         <file>icons/save_as.png</file>
         <file>icons/undo.png</file>
         <file>icons/redo.png</file>
+        <file>icons/hotkeys.png</file>
     </qresource>
     <qresource prefix="/images">
         <file>icons/slavery.jpg</file>
