support of multiple references property

--- a/qrgui/mainwindow/referenceList.ui
+++ b/qrgui/mainwindow/referenceList.ui
@@ -39,7 +39,7 @@
     </rect>
    </property>
    <property name="selectionMode">
-    <enum>QAbstractItemView::SingleSelection</enum>
+    <enum>QAbstractItemView::ExtendedSelection</enum>
    </property>
   </widget>
  </widget>
