Added int and float property generation (with auto-casts)

--- a/plugins/robots/robotsGenerator/nxtOSEK/templates.qrc
+++ b/plugins/robots/robotsGenerator/nxtOSEK/templates.qrc
@@ -70,5 +70,6 @@
         <file>templates/sensors/port4.t</file>
         <file>templates/functions/random.t</file>
         <file>templates/functions/randomize.t</file>
+        <file>templates/types/cast.t</file>
     </qresource>
 </RCC>
