Added null generator to avoid segfaults on unknown blocks

--- a/plugins/robots/robotsGenerator/nxtOSEK/templates.qrc
+++ b/plugins/robots/robotsGenerator/nxtOSEK/templates.qrc
@@ -79,5 +79,6 @@
         <file>templates/makefile.t</file>
         <file>templates/oil.t</file>
         <file>templates/oilTask.t</file>
+        <file>templates/comment.t</file>
     </qresource>
 </RCC>
