Accomplished simplest cases

--- a/plugins/robots/robotsGenerator/trik/templates.qrc
+++ b/plugins/robots/robotsGenerator/trik/templates.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/nxtOSEK">
+    <qresource prefix="/trik">
         <file>templates/beep.t</file>
         <file>templates/break.t</file>
         <file>templates/continue.t</file>
