for fixing #1099 : "Сделать залипание инструмента при выборе. Переключение на новый инструмент самим пользователем"

--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -41,5 +41,6 @@
         <file>icons/leftButton.png</file>
         <file>icons/leftButtonPressed.png</file>
         <file>icons/rightButton.png</file>
+        <file>icons/2d_none.png</file>
     </qresource>
 </RCC>
